codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plans_picker_lifecycle.snap
---
source: tui/src/chatwidget/tests/saved_plans.rs
expression: popup
---
  Saved plans


› Approved plan    approved · <updated_at> · project · rev 2
  Superseded plan  superseded · <updated_at> · other · rev 2

  Press enter to confirm or esc to go back
